--- a/app/src/main/res/layout/activity_habit.xml
+++ b/app/src/main/res/layout/activity_habit.xml
@@ -10,29 +10,34 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/activity_margin"
-        android:textAppearance="?android:textAppearanceMedium"
-        tools:text="@string/habit_heading" />
+        android:paddingBottom="@dimen/activity_margin"
+        android:text="@string/habit_heading"
+        android:textAppearance="?android:textAppearanceMedium" />
 
     <!-- Input field -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingBottom="@dimen/activity_margin">
 
         <!-- Habit drop-down spinner -->
         <Spinner
             android:id="@+id/spinner_habit"
             android:layout_width="match_parent"
             android:layout_height="48dp"
-            android:paddingRight="16dp"
             android:spinnerMode="dropdown" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/text_view_data"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
 
+        <TextView
+            android:id="@+id/text_view_data"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingBottom="@dimen/activity_margin" />
+    </ScrollView>
 
 </LinearLayout>
